add data dropuot

--- a/MeasuringResistance/paper/src/main.tex
+++ b/MeasuringResistance/paper/src/main.tex
@@ -308,6 +308,12 @@
     \newpage
     \section {Looking for Data Outliers}\label{sec:looking-for-data-outliers}
 
+    As mentioned above, there's always a non-zero probability, that some measurements or equation system solvings might be incorrect. \newline
+    So, it makes sense to filter them: the ones, that are out of $n \cdot \varsigma$ from the center to fix that.\newline
+    This graph shows density of R distribution and its dependence on the resistance itself.
+    Here we clearly see, that one of the points doesn't fit to the gap: there's probably a mistake there. \newline
+
+
     \newpage
     \section {Initial Dispersions}\label{sec:initial-dispersions}
     \input{../../../!LatexTemplates/low_random_dispersion.tex}\newline
@@ -318,6 +324,8 @@
 
     \newpage
     \section{Optimizing the Target Function}\label{sec:optimizing-the-target-function}
+
+    
 
     \newpage
     \section{The Answer}\label{sec:answer}
